k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tiny-test
  labels:
    app: tiny-test
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
    name: http
  selector:
    app: tiny-test
